[project]
name = "iniyas-travels-pdf-generator"
version = "0.1.0"
description = "Streamlit app for generating Iniyas Travels quotation and invoice PDFs."
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "streamlit>=1.40.0",
    "reportlab>=4.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
